--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,9 +17,11 @@
     "svelte-check": "^3.4.6",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.5.0"
   },
   "dependencies": {
-    "quill": "^1.3.7"
+    "@tiptap/core": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12"
   }
 }
