--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@tiptap/core": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12"
   }
