--- a/front-end/package.json
+++ b/front-end/package.json
@@ -26,6 +26,7 @@
     "@tiptap/extension-underline": "^2.1.12",
     "@tiptap/pm": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "firebase": "^10.7.1",
     "svelte-fa": "^3.0.4"
   }
 }
