Added in basic sign up and login authentication with Firebase

--- a/svelte-kit/package.json
+++ b/svelte-kit/package.json
@@ -42,6 +42,7 @@
 		"@tiptap/extension-underline": "^2.1.13",
 		"@tiptap/pm": "^2.1.13",
 		"@tiptap/starter-kit": "^2.1.13",
+		"firebase": "^10.7.1",
 		"svelte-fa": "^3.0.4",
 		"tiptap": "^1.32.2"
 	}
