--- a/svelte-kit/package.json
+++ b/svelte-kit/package.json
@@ -43,6 +43,7 @@
 		"@tiptap/pm": "^2.1.13",
 		"@tiptap/starter-kit": "^2.1.13",
 		"firebase": "^10.7.1",
+		"openai": "^4.38.2",
 		"svelte-fa": "^3.0.4",
 		"tiptap": "^1.32.2"
 	}
