--- a/svelte-kit/package.json
+++ b/svelte-kit/package.json
@@ -42,6 +42,7 @@
 		"@tiptap/extension-underline": "^2.1.13",
 		"@tiptap/pm": "^2.1.13",
 		"@tiptap/starter-kit": "^2.1.13",
+		"dotenv": "^16.4.5",
 		"firebase": "^10.7.1",
 		"openai": "^4.38.2",
 		"svelte-fa": "^3.0.4",
