--- a/svelte-kit/package.json
+++ b/svelte-kit/package.json
@@ -42,9 +42,12 @@
 		"@tiptap/extension-underline": "^2.1.13",
 		"@tiptap/pm": "^2.1.13",
 		"@tiptap/starter-kit": "^2.1.13",
+		"axios": "^1.6.8",
+		"cheerio": "^1.0.0-rc.12",
 		"dotenv": "^16.4.5",
 		"firebase": "^10.7.1",
 		"openai": "^4.38.2",
+		"robots-parser": "^3.0.1",
 		"svelte-fa": "^3.0.4",
 		"tiptap": "^1.32.2"
 	}
