--- a/svelte-kit/package.json
+++ b/svelte-kit/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@iconify/json": "^2.2.239",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.6",
@@ -31,6 +32,7 @@
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
+		"unplugin-icons": "^0.19.2",
 		"vite": "^5.0.3",
 		"vitest": "^1.0.0"
 	},
