--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@tiptap/core": "^2.1.13",
+		"@tiptap/extension-bubble-menu": "^2.6.6",
 		"@tiptap/extension-underline": "^2.1.13",
 		"@tiptap/pm": "^2.1.13",
 		"@tiptap/starter-kit": "^2.1.13",
