--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"openai": "^4.38.2",
 		"robots-parser": "^3.0.1",
 		"svelte-fa": "^3.0.4",
+		"svelte-tiptap": "^1.1.3",
 		"tiptap": "^1.32.2"
 	}
 }
